fix(slider): fix caption position on small iOS

--- a/src/styles/Slider.module.scss
+++ b/src/styles/Slider.module.scss
@@ -1,5 +1,6 @@
 .sliderContainer {
     width: 100%;
+    position: relative;
 }
 
 .slider {
@@ -11,7 +12,7 @@
     height: 100%;
     cursor: pointer;
     aspect-ratio: 49/462;
-    @media screen and (max-width: $tablet-breakpoint) {
+    @media screen and (max-width: 500px) {
         aspect-ratio: 27.534/152.32;
     }
 }
@@ -29,6 +30,9 @@
     color: white;
     position:absolute;
     top:34%;
+    @media screen and (max-width: 500px) {
+        top: 25%;
+    }
     line-height: 2vw;
     font-size: 1.5vw;
     opacity: 0;
